<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:gravity="fill_vertical"
    android:layout_marginTop="50dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/palabra1"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:hint="Ingrese palabra 1"
        android:textSize="30sp"
        />


    <EditText
        android:id="@+id/palabra2"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:hint="Ingrese palabra 2"
        android:textSize="30sp" />

    <Button
        android:id="@+id/botonComparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20sp"
        android:text="Comparar"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10sp"
        android:textSize="30sp"
        />
</LinearLayout>

    <!--lugar para el teclado-->